k8s/ingress/3-ingress-real-example.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: issuer-letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app.kubernetes.io/instance: core-client
    app.kubernetes.io/name: core-client
    app.kubernetes.io/version: 0.2.6
  name: core-client
  namespace: stg
spec:
  rules:
    - host: stg.domain_here.com
      http:
        paths:
          - backend:
              serviceName: core-client
              servicePort: 5000
            path: /
  tls:
    - hosts:
        - stg.domain_here.com
      secretName: stg.domain_here.com
